[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[dependencies]
anyhow = "1"
axum = { version = "0.6" }
chrono = { version = "0.4", default-features = false }
comrak = { version = "0.16", default-features = false }
futures = "0.3"
minify-html = "0.10"
notify = "5"
once_cell = "1"
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "fs", "sync"] }

