[package]
name = "blog"
version = "0.1.0"
edition = "2021"

[profile.dev]
debug = true

[dependencies]
anyhow = "1"
axum = { version = "0.6" }
axum-client-ip = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
comrak = { version = "0.16", default-features = false }
fern = { version = "0.6", features = ["colored"] }
futures = "0.3"
log = { version = "0.4" }
minify-html = "0.10"
notify = "5"
once_cell = "1"
serde = "1"
serde_json = "1"
sqlx = { version = "0.6", features = ["sqlite", "runtime-tokio-rustls"]}
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "fs", "sync"] }
libsqlite3-sys = { version = "*", features = ["pkg-config"] }

[profile.release]
lto = "fat"
codegen-units = 1
