[package]
name = "blog"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-only"

[profile.dev]
debug = true

[dependencies]
anyhow = "1"
axum = { version = "0.6", default-features = false }
axum-client-ip = "0.4"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
comrak = { version = "0.16", default-features = false }
fern = { version = "0.6", features = ["colored"] }
futures = { version = "0.3", default-features = false, features = ["executor"] }
log = { version = "0.4", default-features = false }
minify-html = { version ="0.10", default-features = false }
notify = { version = "5", default-features = false, features = ["crossbeam-channel"] }
once_cell = "1"
serde = "1"
sqlx = { version = "0.6", default-features = false, features = ["sqlite", "runtime-tokio-rustls"]}
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "macros", "fs", "sync"] }
simd-json = { version = "0.7" }

[profile.release]
lto = "fat"
codegen-units = 1
